# GuidedLDA

./: README.rst  build_dist.sh  setup.cfg  setup.py
guidedlda/: _guidedlda.c  guidedlda.py
